crreation seconde page

--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <button type="submit">Envoyer</button>
     </form>
 
+<p>Vous pouvez également <a href="seconde-page.html">cliquer ici</a> pour être redirigé vers une autre page.</p>
+
+
     <script>
         document.getElementById('monFormulaire').addEventListener('submit', function(event) {
             event.preventDefault(); // Empêche l'envoi du formulaire par défaut
