--- a/seconde-page.html
+++ b/seconde-page.html
@@ -10,5 +10,8 @@
     <p>Ceci est le contenu de ma seconde page.</p>
     <button onclick="alert('Vous avez cliqué sur le premier bouton')">Bouton 1</button>
     <button onclick="alert('Vous avez cliqué sur le deuxième bouton')">Bouton 2</button>
+
+    <!-- Ajoutez un bouton pour revenir à la première page -->
+    <a href="index.html"><button>Revenir à la première page</button></a>
 </body>
 </html>
